--- a/app/src/main/res/layout/fragment_tween_animation.xml
+++ b/app/src/main/res/layout/fragment_tween_animation.xml
@@ -10,7 +10,7 @@
         android:id="@+id/animatedButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Press me"
+        android:text="@string/press_me"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
